2014-01-28 Attila Krasznahorkay <Attila.Krasznahorkay@cern.ch>
	* Adding some explicit includes to the headers making
	  use of uint32_t. Interestingly the absence of these includes
	  only causes build failures on some platforms/setups.
	* Tagging as xAODTrigL1Calo-00-00-06

2014-01-24 Attila Krasznahorkay <Attila.Krasznahorkay@cern.ch>
	* Migrated the package to use RootCore for the standalone
	  compilation.
	* Not runtime tests done, but things should be okay in principle
	  after the update.
	* Tagging as xAODTrigL1Calo-00-00-05

2013-12-19 John Morris <john.morris@cern.ch>
	* Tag as xAODTrigL1Calo-00-00-04
	* Run1 EDM pretty much complete

2013-12-17 John Morris <john.morris@cern.ch>
	* Tag as xAODTrigL1Calo-00-00-03
	* CMMRoI guid in selection.xml

2013-12-13 Attila Krasznahorkay <Attila.Krasznahorkay@cern.ch>
	* Set the "Id Revision Date" keywords on all the source files.
	* Used CMMCPHits as an example of how all the other classes
	  should be updated. Demonstrating how documentation should be
	  provided, and how the macros from xAODCore should be used.
	  This included defining all the ElementLink/DataLink dictionaries
	  as well.
	* Added standalone compilation capabilities to the package.
	  (hscript.yml)
	* Not tagging, this is just supposed to be an example for further
	  improvements.

2013-12-12 John Morris <john.morris@cern.ch>
	* Tag as xAODTrigL1Calo-00-00-02
	* Adding CMM, JetElement and RODHeader

2013-12-09 John Morris <john.morris@cern.ch>
	* Tag as xAODTrigL1Calo-00-00-01
	* CPM Hits,RoI,Tower
	* JEM Hits,RoI,EtSums
	* More to follow....
